--- a/src/public/style.css
+++ b/src/public/style.css
@@ -32,14 +32,32 @@
 .button-wrapper {
   grid-column: 1/3;
   text-align: center;
+  padding: 10px;
+}
+
+.button-wrapper input {
+  background-color: rgb(243, 243, 243);
+  height: 30px;
+  padding: 2px 5px;
+  width: 300px;
+  border-radius: 12px;
+  border: 2px solid rgb(45, 131, 230);
 }
 
 button {
-  background-color: blue;
+  background-color: rgb(45, 131, 230);
   color: white;
   width: 60px;
   height: 30px;
-  border-radius: 5px;
+  border-radius: 12px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 2px solid rgb(45, 131, 230);
+  background-color: white;
+  color: rgb(45, 131, 230);
 }
 
 .drop-box,
